<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue">


    <TextView
        android:id="@+id/textView"
        android:layout_width="238dp"
        android:layout_height="41dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="88dp"
        android:text="@string/Urzadzenia"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="205dp"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:gravity="center"
        android:text="@string/Autor"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="72dp"
        android:contentDescription="@string/opis2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/odkurzacz" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="88dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pralka"
        android:contentDescription="@string/opis1"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="68dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="228dp"
        android:gravity="center"
        android:text="@string/opis1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="204dp"
        android:gravity="center"
        android:text="@string/opis2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView" />

    <EditText
        android:id="@+id/numerpraniaedit"
        android:layout_width="194dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#87CEEB"
        android:hint="@string/pranie"
        android:inputType="number"
        android:labelFor="@id/numerpraniawynik"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:autofillHints="@string/pranie"
        android:textColor="@color/black"
        android:padding="8dp"
        android:textColorHint="#444444"/>

    <TextView
        android:id="@+id/numerpraniawynik"
        android:layout_width="211dp"
        android:layout_height="119dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:text="@string/textviewpranie"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/numerpraniaedit" />

    <Button
        android:id="@+id/buttonPralka"
        android:layout_width="177dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="52dp"
        android:text="@string/ZatwierdzButton"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numerpraniaedit"
        android:backgroundTint="@color/royaleBlue"
        />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="159dp"
        android:layout_height="19dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="64dp"
        android:text="@string/wlaczony"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/wlaczonybutton"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        android:backgroundTint="@color/royaleBlue"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/status"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />
</androidx.constraintlayout.widget.ConstraintLayout>